--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "aframe": "^0.8.2",
     "html-webpack-plugin": "^2.30.1",
+    "simplex-noise": "^2.4.0",
     "uglifyjs-webpack-plugin": "^1.1.6",
     "url": "^0.11.0",
     "webpack": "^3.10.0",
