--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "webpack-dev-server": "^2.11.1"
   },
   "devDependencies": {
+    "copy-webpack-plugin": "^4.5.1",
     "prettier": "^1.10.2"
   },
   "engines": {
