--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "license": "MIT",
   "dependencies": {
     "aframe": "^0.8.2",
+    "aframe-point-component": "^1.1.1",
     "html-webpack-plugin": "^2.30.1",
     "simplex-noise": "^2.4.0",
     "uglifyjs-webpack-plugin": "^1.1.6",
