--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "aframe-point-component": "^1.1.1",
     "html-webpack-plugin": "^2.30.1",
     "simplex-noise": "^2.4.0",
+    "tone": "^0.12.80",
     "uglifyjs-webpack-plugin": "^1.1.6",
     "url": "^0.11.0",
     "webpack": "^3.10.0",
